--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,36 +1,24 @@
-# Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+# 🔧 Your GitHub username and repo name
+owner: XSephiie
+repo: rbxplugin-status
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
-  - name: IPv6 test
-    url: forwardemail.net
-    port: 80
-    check: "tcp-ping"
-    ipv6: true
+  - name: RBX Plugin
+    url: https://rbxpluginv1.onrender.com
+    method: GET
+    expectedStatus: 200
 
 status-website:
-  # Add your custom domain name, or remove the `cname` line if you don't have a domain
-  # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
-  # baseUrl: /your-repo-name
+  # If you don't have a custom domain, use baseUrl instead of cname
+  # Uncomment the next line and replace with your repo name
+  baseUrl: /rbxplugin-status
+
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  name: RBX Plugin Status
+  introTitle: "RBX Plugin Status"
+  introMessage: Monitoring uptime for [RBX Plugin](https://rbxpluginv1.onrender.com) every 5 minutes using GitHub Actions.
   navbar:
     - title: Status
       href: /
     - title: GitHub
-      href: https://github.com/$OWNER/$REPO
-
-# Upptime also supports notifications, assigning issues, and more
-# See https://upptime.js.org/docs/configuration
+      href: https://github.com/your-github-username/rbxplugin-status
